# AtomVM

./: .clang-format-ignore  .gitignore  CHANGELOG.md  CMakeLists.txt  NOSMP_README.md  test_atomvm_float.erl
.github/workflows/: build-and-test-macos.yaml  build-and-test-on-freebsd.yaml  build-and-test-other.yaml  build-and-test.yaml  build-libraries.yaml  check-formatting.yaml  codechecker.yaml  esp32-build.yaml  esp32-mkimage.yaml  esp32-simtest.yaml  nightly-release-tags.yaml  pico-build.yaml  run-tests-with-beam.yaml  semgrep.yml  stm32-build.yaml  wasm-build.yaml
.reuse/: dep5
CMakeModules/: BuildElixir.cmake  BuildErlang.cmake  MbedTLS.cmake
LICENSES/: LLVM-exception.txt
doc/: release-notes.md.in
doc/src/: atomvm-internals.md  build-instructions.md  getting-started-guide.md  network-programming-guide.md  programmers-guide.md
examples/emscripten/: CMakeLists.txt  wasm_webserver.erl
examples/erlang/esp32/: CMakeLists.txt
libs/: CMakeLists.txt
libs/avm_emscripten_nosmp/src/: CMakeLists.txt
libs/avm_network/src/: network.erl
libs/dialyzer/: erts_internal.erl
libs/eavmlib/src/: atomvm.erl  (+1 more)
src/libAtomVM/: CMakeLists.txt  atomics.c  atomics.h  context.c  context.h  counters.c  counters.h  defaultatoms.def  dist_nifs.c  ets.c  ets.h  ets_multimap.c  ets_multimap.h  externalterm.c  globalcontext.c  globalcontext.h  jit.c  jit.h  mailbox.c  mailbox.h  module.c  nifs.c  nifs.gperf  opcodesswitch.h  otp_crypto.c  otp_socket.c  otp_ssl.c  scheduler.c  scheduler.h  smp.h  sys.h  timer_list.h
tests/: test-heap.c  test-mailbox.c  test.c
tests/erlang_tests/: CMakeLists.txt  float2bin2short.erl  float2list2short.erl  test_atomics.erl  test_bs.erl  test_ets.erl  test_monitor.erl  test_monotonic_time.erl  test_node.erl
(+29 files in other folders)
